--- a/src/components/Navbar/Navbar.styles.css
+++ b/src/components/Navbar/Navbar.styles.css
@@ -57,6 +57,10 @@
   .nav-items {
     display: none;
   }
+  .nav-item {
+    padding: 10px 16px;
+    font-size: var(--h5) !important;
+  }
   .menu {
     margin: 0 0 0 auto;
     width: 60px;
@@ -64,29 +68,40 @@
     display: flex;
     cursor: pointer;
   }
-  .nav-item {
-    padding: 16px 100%;
-  }
   .show {
     margin: 0 !important;
     display: flex !important;
     flex-direction: column;
-    width: 90% !important;
+    width: 40% !important;
     min-height: max-content !important;
-    height: 60vh !important;
+    height: max-content;
     position: absolute;
     top: 60px;
     right: 0;
     background-color: var(--nav-color);
+    border-radius: 0 0 0 12px;
     animation-name: show;
     animation-duration: 1s;
   }
   .hide {
+    margin: 0 !important;
+    display: flex !important;
+    flex-direction: column;
+    width: 40% !important;
+    min-height: max-content !important;
+    height: max-content;
     position: absolute;
+    top: 60px;
+    right: -40%;
+    background-color: var(--nav-color);
+    border-radius: 0 0 0 12px;
+    animation-name: show;
+    animation-duration: 1s;
+    /* position: absolute;
     top: 60px;
     left: 100%;
     animation-name: hide;
-    animation-duration: 1s;
+    animation-duration: 1s; */
   }
 
   @keyframes show {
@@ -94,7 +109,7 @@
       left: 100%;
     }
     100% {
-      left: 10%;
+      left: 60%;
     }
   }
   @keyframes hide {
@@ -126,7 +141,7 @@
     flex-direction: column;
     width: 60% !important;
     min-height: max-content !important;
-    height: 60vh !important;
+    height: 40vh !important;
     position: absolute;
     top: 60px;
     right: 0;
