--- a/src/components/Experience/Experience.styles.css
+++ b/src/components/Experience/Experience.styles.css
@@ -10,7 +10,14 @@
   align-items: center;
 }
 #experience .title {
-  width: 80%;
+  width: 80vw;
+  text-transform: uppercase;
+  font-size: var(--h3);
+}
+#experience .title span {
+  margin-left: 20px;
+  letter-spacing: 2px;
+  font-family: "playfair", sans-serif !important;
 }
 #experience .container {
   width: 80vw;
@@ -109,6 +116,20 @@
   #experience .tab {
     flex-direction: column;
   }
+  #experience .title {
+    margin-top: 40px;
+    display: flex;
+    justify-content: center;
+  }
+  #experience .title .heading2 {
+    margin: 0;
+    width: 90%;
+    text-align: center;
+  }
+  #experience .title span {
+    margin: 0;
+    font-size: var(--h2);
+  }
   #experience .container {
     margin: 30px auto;
   }
@@ -157,6 +178,13 @@
 @media screen and (min-width: 550px) and (max-width: 1000px) {
   #experience .tab {
     flex-direction: column;
+  }
+  #experience .title {
+    margin-top: 40px;
+  }
+  #experience .title .heading2 {
+    margin: auto;
+    width: 90%;
   }
   #experience .container {
     margin: 30px auto;
