--- a/src/components/HomePage/HomePage.styles.css
+++ b/src/components/HomePage/HomePage.styles.css
@@ -18,11 +18,17 @@
 }
 .tech-stack {
   margin: auto;
-  width: 60vw;
+  width: 65vw;
   height: 60px;
   display: flex;
+  flex-direction: column;
+  justify-content: center;
   flex-wrap: wrap;
   align-items: center;
+}
+.stacks {
+  display: flex;
+  flex-wrap: wrap;
 }
 .circle {
   cursor: pointer;
@@ -97,44 +103,6 @@
   width: 55px;
   height: 55px;
 }
-.bookmarks {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  position: fixed;
-  top: 20%;
-  min-height: 400px;
-  height: 50vh;
-  min-width: 20vw;
-  width: 300px;
-  z-index: 2;
-}
-.bookmark {
-  position: relative;
-  left: -270px;
-  background-color: var(--primary-color);
-  height: 20%;
-  width: 100%;
-  border-radius: 0 50px 50px 0;
-  transition: all 0.5s;
-  overflow: hidden;
-}
-.bookmark:hover {
-  cursor: pointer;
-  left: -120px;
-}
-.bookmark a {
-  width: 100%;
-  height: 100%;
-  text-decoration: none;
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-}
-.bookmark h3 {
-  margin-right: 40px;
-  font-size: var(--h3);
-}
 @media screen and (max-width: 550px) {
   #homepage .container {
     margin-top: 100px;
@@ -155,6 +123,9 @@
   .tech-stack {
     width: 100%;
     height: max-content;
+    justify-content: center;
+  }
+  .stacks {
     justify-content: center;
   }
   .circle {
@@ -192,6 +163,9 @@
   .tech-stack {
     width: 100%;
     height: max-content;
+    justify-content: center;
+  }
+  .stacks {
     justify-content: center;
   }
   .emoji {
