--- a/src/components/Projects/Projects.styles.css
+++ b/src/components/Projects/Projects.styles.css
@@ -81,16 +81,31 @@
   font-size: var(--h3);
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 #projects .link-box {
   min-width: 235px;
   width: max-content;
+  display: flex;
+  flex-wrap: wrap;
+}
+#projects .url-logo {
+  margin: auto;
+  margin-right: 10px;
+  width: 20px;
+  height: 20px;
+}
+#projects .url-logo .logo {
+  width: 100%;
 }
 #projects .link {
+  margin-left: auto;
   padding: 10px;
   font-size: var(--h4);
   text-decoration: none;
   color: var(--link-color);
+  display: flex;
+  align-items: center;
   cursor: pointer;
 }
 #projects .link:hover {
@@ -101,6 +116,7 @@
   list-style: none;
 }
 #projects .date {
+  width: max-content;
   font-size: var(--h5);
 }
 @media screen and (max-width: 550px) {
