--- a/src/components/HomePage/HomePage.styles.css
+++ b/src/components/HomePage/HomePage.styles.css
@@ -52,6 +52,7 @@
 }
 .icon {
   width: 60%;
+  cursor: pointer;
 }
 .profile-pic {
   margin: auto 0;
@@ -109,8 +110,8 @@
 }
 @media screen and (max-width: 550px) {
   #home .container {
-    margin-top: 100px;
-    width: 90%;
+    margin-top: 60px;
+    width: 100%;
     height: fit-content;
     flex-direction: column;
     align-items: center;
@@ -125,17 +126,19 @@
     height: 40px;
   }
   .tech-stack {
+    margin-top: 20px;
     width: 100%;
     height: max-content;
     justify-content: center;
   }
   #home .tech-stack .title {
-    justify-content: center;
+    display: none;
   }
   .stacks {
     justify-content: center;
   }
   .circle {
+    margin-left: 6px;
     margin-bottom: 10px;
     width: 30px;
     height: 30px;
@@ -163,6 +166,7 @@
   #home .container {
     margin-top: 60px;
     height: 90vh;
+    width: 90%;
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
@@ -173,6 +177,7 @@
     justify-content: center;
   }
   #home .tech-stack .title {
+    font-size: 14px;
     justify-content: center;
   }
   .stacks {
@@ -187,9 +192,11 @@
     height: 40px;
   }
   .circle {
+    margin-left: 10px;
     margin-bottom: 10px;
-    width: 40px;
-    height: 40px;
+    width: 30px;
+    height: 30px;
+    cursor: pointer;
   }
   .headers {
     height: fit-content;
