--- a/src/components/InputField/InputField.styles.css
+++ b/src/components/InputField/InputField.styles.css
@@ -51,3 +51,9 @@
 #input-field .textarea-field:focus {
   border: 1px solid var(--link-color);
 }
+
+@media screen and (max-width: 550px) {
+  #input-field {
+    font-size: 12px;
+  }
+}
