--- a/src/components/Button/Button.styles.css
+++ b/src/components/Button/Button.styles.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
   padding: 10px 20px;
-  background-color: var(--tertiary-color);
+  background-color: var(--secondary-color);
   border-radius: 4px;
   cursor: pointer;
   border: 1px solid var(--header-color);
