--- a/src/components/Contact/Contact.styles.css
+++ b/src/components/Contact/Contact.styles.css
@@ -4,13 +4,14 @@
   width: 100vw;
   min-height: 100vh;
   max-height: max-content;
-  background-color: var(--secondary-color);
+  background-color: var(--tertiary-color);
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 #contact .container {
-  width: 100%;
+  margin: 40px;
+  width: 80vw;
   display: grid;
   grid-template-columns: 1fr 1fr;
 }
@@ -44,7 +45,7 @@
 }
 #contact .contact-headline-container {
   width: 100%;
-  padding: 40px;
+  padding: 40px 0;
   display: flex;
   flex-direction: column;
   gap: 10px;
@@ -81,18 +82,22 @@
 }
 @media screen and (min-width: 550px) and (max-width: 1000px) {
   #contact .container {
+    margin: 30px auto;
     display: grid;
     grid-template-columns: auto;
   }
   #contact .form {
-    width: 70vw;
+    width: 80vw;
   }
   #contact .contact-headline-container {
     margin: auto;
     margin-top: 20px;
-    width: 70vw;
+    width: 80vw;
     padding: 0;
   }
 }
 @media screen and (min-width: 1000px) {
+  #contact .container {
+    margin: 30px auto;
+  }
 }
